# deeptan

./: .gitignore  README.md  methods_bil.md  pyproject.toml  singularity_deeptan.def  test_polars.csv
.other/: comparison  modules_jit.py  plot_heatmap.R  read_rds_iden.r  trans_rds2h5ad.r
.other/.archieved/: .copy_bin.sh  DSAR.py  _sparse_example.py  _sparse_example_edited.py  act_env.jl  check_perf.sh  core.py  core_gat_pyg.py  data_ncv_gv.py  function_tmapreduce.jl  md_1_PreNetInit.jl  model_DSAR_1.1.py  modules.202503051816.py
.other/.trash/: .md_1_PreNetInit.jl  .module_MyUtils.jl  .trash_test_pipe.jl  .trash_utils.jl  act_env.jl  example_cudaatomadd.jl  gat1+2.py  gatv2_deepseek.py  gatv2_glm4.py  md_1_PreNetInit_bac.jl  micuda.jl  test_rr.jl  test_tmux_FT.jl
.other/plot/: plot_metrics.ipynb
.other/plot_py/: try_01.py
.other/proc_data/: make_big_mat_0.py  md_0_io.jl  md_1_proc_rna.jl  pipe_rna.sh  proc_07.jl  proc_24.jl  proc_25.jl  proc_26.jl  proc_GSE54680.jl  proc_GSE80744.jl  proc_PRJEB25079.jl
.other/test/: 20231108_rosmap.jl  tag_gen.jl  test_myMI_reliable.jl  test_pipe.jl  test_plot.jl  verify_pyg.py
.other/try/: .pooded-GAT_1.2.py  failed_parquet.py  proc_snp.sh  read_rs_npz.py
.try/: run.local.eval.snrna_6tissues_Epidermal.balanced.full.nmicg6.ipynb  run.local.fit.snrna_6tissues_Epidermal_balanced_full_nmicg6.multitask.s42.sh  run.local.fit.snrna_6tissues_Epidermal_balanced_full_nmicg8.multitask.s42.sh  run.local.fit.snrna_6tissues_Epidermal_balanced_full_nmicg8_dev.multitask.s42.sh  run.local.litdata.snrna_6tissues_Epidermal.balanced.split_full.nmicg7.sh  run.local.litdata.snrna_6tissues_Epidermal.balanced.split_full.nmicg8.sh  run_01_read_celltypes2onehot_snrna_6tissues_Epidermal.balanced.ipynb
.try/collected_logs/: best_ckpts.csv  best_ckpts_seed_42.csv  best_ckpts_seed_43.csv  best_ckpts_seed_43.parquet  best_ckpts_seed_44.csv  best_ckpts_seed_45.csv  best_ckpts_seed_45.parquet  best_ckpts_seed_46.csv  logs_tsb.parquet
.try/done/: .run.local.litdata.snrna.sh  plot.2gradients.ipynb  plot_ath_snrna_extra.ipynb  read_GSE155304.ipynb  results_bulk_net.ipynb  run.local.eval.multivi.ipynb  run.local.eval.scgpt.ipynb  run.local.eval.snrna_6tissues_Epidermal.balanced.full.nmicg1.ipynb  run.local.fit.bulk_exp_meth.multitask.s45.atune.pt28.sh  run.local.fit.bulk_exp_meth.multitask.s45.pt28.sh  run.local.fit.sc_mul.multitask.s42.sing.sh  run.local.fit.sc_mul.multitask_diffpool.s44.uv.sh  run.local.fit.sc_mul.multitask_diffpool.sxx.uv.sh  run.local.fit.sc_mul.multitask_new.s42.uv.sh  run.local.fit.sc_mul.multitask_noguide.s42.uv.sh  run.local.fit.sc_rna.focus_label_on_focus_recon.s42.uv.sh  run.local.fit.sc_rna.multitask_diffpool.s43.uv.sh  run.local.fit.sc_rna_full.multitask.s42.uv.sh  run.local.fit.snrna_6tissues_Epidermal_balanced_full.multitask.s42.uv.atune.sh  run.local.fit.snrna_full_extra_nmic_g_mi02win001.multitask.s42.uv.sh  run.local.litdata.sc_multiome.top2000_quarter.sh  run.local.litdata.scmul.sh  run.local.litdata.snrna_6tissues_Epidermal.balanced.split_full.nmicg1.sh  (+8 more)
data/: README.md
examples/: run04.local_litdata_optimize.sh  run05.local_train.sh  run06.local_predict.py  run07.local.eval.ipynb  run_01_read_celltypes2onehot.ipynb  run_02_h5_to_parq_split.ipynb  run_03_mi2graph.sh
mi2graph/: .build.sh  .gitignore  Cargo.toml  README.md
mi2graph/src/: lib.rs  main.rs  mutualinfo.rs  processing.rs  slidingwindow.rs  sortf64.rs
pregv/: .build.sh  Cargo.toml  README.md
pyproj/: README.md
src/: .old.calc_metrics.ipynb  .run_05_fit.py  .share.run.local.eval.sc_mul.ipynb  .try.read_tsb.ipynb  calc_metrics.ipynb  calc_metrics_scButterfly.ipynb  check_sample_grad.ipynb  edit_snRNA_batch_info.ipynb  format_deeptan_cluster.ipynb  look_.py  merge_peaks.ipynb  metrics.clus.DeepTAN.scmul.csv  metrics.clus.DeepTAN.snrna.csv  metrics.clus.MultiVI.scmul.csv  metrics.clus.scGPT.snrna.csv  net.ipynb  optimize_data.py  pick_avail_feat_value.ipynb  pipeline.py  plot.2gradients.ipynb  plots.py  predicted_labels_of_extra_test.parquet  proc_scmultiome_rdsh5.ipynb  read_GSE155304.ipynb  read_celltypes.py  read_celltypes2onehot.ipynb  read_ctypes.py  result.sc_mul.summary_clustering.csv  result.sc_mul.summary_label.csv  result.sc_mul.summary_recon.csv  result.sc_multiome_minmi0.35_top2000.summary_clustering.csv  result.sc_multiome_minmi0.35_top2000.summary_label.csv  result.sc_multiome_minmi0.35_top2000.summary_recon.csv  result.sc_rna.summary_label.csv  result.sc_rna_annotated_minmi0.0_top2000.summary_clustering.csv  result.sc_rna_annotated_minmi0.0_top2000.summary_label.csv  result.sc_rna_annotated_minmi0.0_top2000.summary_recon.csv  result.snrna_full.summary_label.csv  results_bulk_net.ipynb  results_bulk_net_new.ipynb  (+134 more)
stat/: metrics.py  plots.py
tests/: .run_optimize_data_GSE155304.sh  .test_load_model.py  GSE226097_umap.ipynb  _table_avail_micg.csv  _tmp.sh  check_perf.sh  get_union_feat_mic_g.py  mic_g.py  mic_g_gen_sh.py  plot_20250214.ipynb  read_bulk.ipynb  run.hpc.fit.sc_mul.s42.sh  run.hpc.fit.sc_rna.s42.sh  run.hpc.fit_bulk_exp_meth_on_sc_rna_annotated.sh  run.hpc.fit_sc_mul.sh  run.hpc.fit_sc_multiome.sh  run.hpc.fit_sc_rna.sh  run.hpc.test_pyg.sh  run.local.fit.bulk_exp_meth.focus_label.s42.uv.sh  run.local.fit.bulk_exp_meth.multitask.s43.uv.sh  run.local.fit.bulk_exp_meth.sh  run.local.fit.sc_mul.focus_label.s42.uv.sh  run.local.fit.sc_mul.focus_label.s43.uv.sh  run.local.fit.sc_mul.focus_label.s44.uv.sh  run.local.fit.sc_mul.focus_label_on_focus_recon.s42.uv.sh  run.local.fit.sc_mul.focus_recon.s42.uv.sh  run.local.fit.sc_mul.focus_recon.s43.uv.sh  run.local.fit.sc_mul.focus_recon.s44.uv.sh  run.local.fit.sc_mul.multitask.s42.uv.sh  run.local.fit.sc_mul.multitask_noguide.s43.uv.sh  run.local.fit.sc_rna.focus_label.s42.uv.sh  run.local.fit.sc_rna.focus_recon.s43.uv.sh  run.local.fit.sc_rna.multitask.s42.uv.sh  run.local.fit.sc_rna.multitask_noguide.s44.uv.sh  run.local.fit.sc_rna.sh  run.local.fit_sc_mul.focus_recon.uv.sh  run.local.fit_sc_mul.sh  run.local.fit_sc_mul.uv.sh  run.local.fit_sc_rna.sh  run.local.litdata.sc_multiome.sh  (+50 more)
(+298 files in other folders)
