[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeptan"
version = "0.1.2"
description = "DeepTAN: A multi-task framework designed to infer multi-omics trait-associated networks and reconstruct phenotype-specific omics states from mosaic data input."
authors = [{ name = "Chenhua Wu", email = "chanhuawu@outlook.com" }]
maintainers = [{ name = "Chenhua Wu", email = "chanhuawu@outlook.com" }]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "leidenalg>=0.10.2",
    "lightning>=2.5.0.post0",
    "litdata==0.2.45",
    "mosaicml-streaming>=0.11.0",
    "optuna>=4.2.0",
    "optuna-dashboard>=0.17.0",
    "pacmap>=0.8.0",
    "polars>=1.26.0",
    "pyarrow>=19.0.0",
    "scanpy>=1.10.4",
    "scib-metrics>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tensorboard>=2.18.0",
    "torchmetrics>=1.7.1",
    "zstd>=1.5.6.2",
    "setuptools",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "torch-geometric>=2.6.1",
]
license = { file = "LICENSE" }
keywords = ["bioinformatics", "deep learning", "pytorch"]
classifiers = [
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/cma2015/DeepTAN"

[project.scripts]
hello = "deeptan.cli_:hello"

[tool.uv.pip]
index-url = "https://mirror.sjtu.edu.cn/pypi/web/simple"

# [project.optional-dependencies]
# pyglibs = [
#     "pyg_lib",
#     "torch_scatter",
#     "torch_sparse",
#     "torch_cluster",
#     "torch_spline_conv",
# ]

[tool.uv]
index-url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
environments = ["sys_platform == 'linux'"]
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu124.html"]
# no-build-isolation-package = [
#     "pyg_lib",
#     "torch_scatter",
#     "torch_sparse",
#     "torch_cluster",
#     "torch_spline_conv",
# ]

[tool.ruff]
line-length = 288
